--- a/styles/app.css
+++ b/styles/app.css
@@ -239,8 +239,9 @@ body * {
   top: 50%;
   left: calc(100% - 35px);
   transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  font-size: 25px;
   color: #bababa;
+  z-index: 2;
 }
 
 .info {
@@ -250,15 +251,38 @@ body * {
   margin-top: 10px;
 }
 
+.error-message {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  background: #d4621d;
+  color: #fff;
+  padding: 10px;
+  border-radius: 0 0 4px 4px;
+  z-index: 1;
+}
+
+.has-error .error-message {
+  bottom: -34px;
+}
+
 .form-control {
+  position: relative;
   display: block;
   width: 100%;
   height: 80px;
+  background: #fff;
   border: none;
   outline: none;
   letter-spacing: 1px;
   font-size: 1.5rem;
   text-indent: 30px;
+  z-index: 2;
+}
+
+#login .has-error .form-control,
+#login-step-2 .has-error .form-control {
+  color: #ec3c3c;
 }
 
 #grocery-list-wrapper {
@@ -284,31 +308,6 @@ body * {
   filter: blur(15px) grayscale(1);
   pointer-events: none;
 }
-
-/* #edit-form {
-  position: absolute;
-  width: 500px;
-  padding: 20px;
-  top: calc(5em + 25px);
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: #fff;
-  color: #3e3e3e;
-  box-shadow: 0 0 0 2px #0259ff;
-  border-radius: 0px 0px 4px 4px;
-  z-index: 1;
-}
-
-#edit-form.close {
-  top: -100%;
-}
-
-#edit-form header {
-  font-weight: bold;
-  font-size: 0.7em;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-} */
 
 #grocery-list-wrapper .navigation {
   position: relative;
@@ -439,6 +438,11 @@ ul#groceries-list {
 
 #groceries-list li.empty-message.hide {
   display: none;
+}
+
+#remaining-items-wrapper {
+  padding: 10px;
+  margin-bottom: 5px;
 }
 
 #groceries-list label {
@@ -669,6 +673,7 @@ ul#groceries-list {
   right: 0;
   width: 50px;
   height: 50px;
+  z-index: 3;
 }
 
 #user-settings .form-wrap .icon.password-peek span.emoji {
@@ -947,6 +952,11 @@ ul#settings-menu.opened {
   #new-item-form .alert.show {
     bottom: 120px;
   }
+
+  .notification {
+    transform: translateY(-100px);
+    left: 10px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
@@ -981,6 +991,7 @@ ul#settings-menu.opened {
     border-radius: 0;
     box-shadow: none;
   }
+
   #login.close,
   #login-step-2.close,
   #user-settings.close {
@@ -999,7 +1010,7 @@ ul#settings-menu.opened {
   }
 
   ul#groceries-list {
-    margin: 15px;
+    margin: 0;
   }
 }
 
@@ -1008,6 +1019,7 @@ ul#settings-menu.opened {
     width: 100%;
   }
   #new-item-form {
+    bottom: 0;
     padding: 10px;
   }
 
